--- a/embold.yaml
+++ b/embold.yaml
@@ -1,6 +1,6 @@
 version: 1
 ## Please visit https://docs.embold.io/v2-quick-start-guide/#update-configurations to know more
-languages: 'JAVA'
+#languages: 'JAVA,CPP'
 # Sources mention which Files/Dirs to be taken for Analysis
 sources:
   #Files or Directories to be Excluded are mentioned in exclusions
@@ -24,15 +24,13 @@ sources:
     - 'demosubproject'
 
 #Specify modules you would like to enable or disable.
-modules:
-    - name: gamma_java
-      enabled: true
-      rules:
-         - key: 'EMB-JAVA-56'
-           enabled: false
-         - key: 'EMB-JAVA-44'
-           enabled: false
-    - name: pmd
-      enabled: true
+#modules:
+#    - name: gamma_java
+#      enabled: true
+#      rules:
+#         - key: 'EMB-JAVA-56'
+#           enabled: false
+#    - name: pmd
+#      enabled: true
 
 ## Please visit https://docs.embold.io/v2-quick-start-guide/#update-configurations to know more
