--- a/embold.yaml
+++ b/embold.yaml
@@ -29,7 +29,7 @@ modules:
       enabled: true
       rules:
          - key: 'EMB-JAVA-56'
-           enabled: false
+           enabled: true
     - name: pmd
       enabled: true
 
