--- a/embold.yaml
+++ b/embold.yaml
@@ -29,7 +29,7 @@ modules:
       enabled: true
       rules:
          - key: 'EMB-JAVA-56'
-           enabled: true
+           enabled: false
     - name: pmd
       enabled: true
 
